@@ -1,4 +1,4 @@
-from mock import MagicMock, patch
+from unittest.mock import MagicMock, patch
 
 from sitemessage.messages.base import MessageBase
 from sitemessage.messages.plain import PlainTextMessage
