@@ -6,6 +6,7 @@ Unreleased
 ----------
 ! Dropped QA for Django 1.7.
 ! Dropped QA for Python 2.
++ Add Django 3.0, removed 1.8 compatibility. Effectively deprecates Py2 support.
 
 
 v1.0.0
